[HT-2] Base controllers and endpoints
