# app/controllers/api/v1/base_controller.rb
@@ -3,6 +3,8 @@
 module Api
   module V1
     class BaseController < ApplicationController
+      include Pundit::Authorization
+
       before_action :authenticate_user!
 
       rescue_from ActiveRecord::RecordNotFound do |_e|
@@ -13,15 +15,19 @@ module Api
         render_validation_errors(e.record)
       end
 
+      rescue_from Pundit::NotAuthorizedError do |_e|
+        render_forbidden
+      end
+
       private
 
       def render_not_found
         render(
           json: {
-                    errors: [
-                      { status: "404", source: { pointer: "/data" }, detail: "Record not found" }
-                    ]
-                  }, status: :not_found
+            errors: [
+              { status: "404", source: { pointer: "/data" }, detail: "Record not found" }
+            ]
+          }, status: :not_found
         )
       end
 
@@ -34,6 +40,16 @@ module Api
           }
         end
         render(json: { errors: errors }, status: :unprocessable_entity)
+      end
+
+      def render_forbidden
+        render(
+          json: {
+            errors: [
+              { status: "403", source: { pointer: "/data" }, detail: "Forbidden" }
+            ]
+          }, status: :forbidden
+        )
       end
     end
   end
